<resources>
    <string name="app_name">Notepad Pro</string>
    <string name="Cancel">Cancel</string>
    <string name="start_game">Start Game</string>
    <string name="login">Login</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="resume_game">Resume Game</string>
    <string name="long_text">hello \n welcome</string>
    <string name="android">Android class</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="website">Website</string>
    <string name="add_note">Add New Note</string>
    <string name="show">Show All Notes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="exit_message">Are you sure to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rate">Rate App</string>
    <string name="rate_app">Rate 5 to App</string>
    <string name="enter_you_title">Enter you title</string>
    <string name="enter_description">Enter your description</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="select_your_language">Select your language :</string>
    <string name="save_data">Save</string>
    <string name="telegram">Telegram</string>
    <string name="instagram">Instagram</string>
    <string name="myName">Reza Gorji</string>
    <string name="myPhoneNumber">09375651522</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="note_pro">Samsung Note Pro</string>
    <string name="version">Version: </string>
    <string name="about_app">About App</string>
    <string name="contact_me">Contact Me</string>
    <string name="address_iran_kohgiloye_va_boyr_ahmad_provence_gachsaran_city">Address: Iran, Kohgiloye va boyr ahmad Provence, Gachsaran city</string>
    <string name="developer_name_reza">Developer Name: Reza</string>
    <string name="developer_family_name_gorji">Developer Family Name: Gorji</string>
    <string name="todo">TODO</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="no_data_found">No Data Found</string>
    <string name="editNote">Edit Note</string>
    <string name="you_can_add_note">You Can Add Note Here</string>
    <string name="edit_note_here">You Can Edit Note Here</string>
    <string-array name="language">
        <item>@string/persian</item>
        <item>@string/english</item>
    </string-array>

</resources>