<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_note" />
    <item android:title="@string/delete_all_notes"
        android:id="@+id/item_deleteAll"
        android:icon="@drawable/ic_baseline_delete_24"
        />
    <group>
        <item
            android:id="@+id/item_about"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/about" />
        <item
            android:id="@+id/item_contact"
            android:icon="@drawable/ic_baseline_verified_user_24"
            android:title="@string/contact" />
    </group>

    <item android:title="@string/setting">


        <menu>


            <item
                android:id="@+id/item_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/setting" />


        </menu>

    </item>


</menu>