<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="@dimen/margin_10"
        app:cardElevation="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                style="@style/custom_view"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/title"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_description"
                style="@style/custom_view"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/description"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_date"
                style="@style/custom_view"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/date"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/txt_description"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_time"
                style="@style/custom_view"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/time"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/txt_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/custom_view"
                android:id="@+id/img_delete"
                android:layout_margin="@dimen/margin_10"
                app:srcCompat="@drawable/ic_baseline_delete_24"
                app:tint="@color/blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/custom_view"
                android:id="@+id/img_share"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                app:srcCompat="@drawable/ic_baseline_share_24"
                app:tint="@color/blue_dark"
                app:layout_constraintEnd_toStartOf="@id/img_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/custom_view"
                android:id="@+id/img_edit"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                app:tint="@color/blue_dark"
                app:layout_constraintEnd_toStartOf="@id/img_share"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>