<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_contact"
        style="@style/custom_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/custom_view"
                android:text="@string/note_pro"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                style="@style/custom_view"
                android:layout_margin="@dimen/margin_10"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_contact"
                style="@style/custom_view"
                android:layout_marginEnd="@dimen/margin_10"
                android:text="@string/contact_me"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_back"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/toolbar_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_developerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/developer_name_reza"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_developerFamilyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/developer_family_name_gorji"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_instagram"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/instagram"
                    android:layout_marginEnd="@dimen/margin_10"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_yahoo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/yahoo"
                    android:layout_marginEnd="@dimen/margin_10"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_gmail"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/google"
                    android:layout_marginEnd="@dimen/margin_10"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_facebook"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/facebook"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/address_iran_kohgiloye_va_boyr_ahmad_provence_gachsaran_city"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>